--- a/Frontend/src/Components/Forms/Buttons/Button.module.css
+++ b/Frontend/src/Components/Forms/Buttons/Button.module.css
@@ -6,6 +6,7 @@
     rgba(197, 77, 197, 0.6) 23%,
     rgba(120, 194, 214, 0.6) 73%
   );
+  
   border-radius: 10px;
   border: none;
   color: white;
@@ -17,4 +18,9 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
+}
+
+.disable {
+  opacity: 0.5;
+  cursor: default;
 }
