--- a/Frontend/src/Components/Staff/Filter/Select.module.css
+++ b/Frontend/src/Components/Staff/Filter/Select.module.css
@@ -26,10 +26,10 @@
   position: absolute;
   border-radius: 5px;
   width: 100%;
-  border: 1px solid #d0d0d0;
+  /* border: 1px solid #d0d0d0; */
   overflow-y: scroll;
   top: 4em;
-  background-color: rgba(29, 29, 29, 0.653);
+  background-color: rgba(29, 29, 29, 0.738);
   z-index: 2;
   scrollbar-width: none;
 }
