--- a/Frontend/src/Components/Table/Table.module.css
+++ b/Frontend/src/Components/Table/Table.module.css
@@ -1,14 +1,22 @@
 .tableContainer {
   font-family: "Nunito", serif;
   font-optical-sizing: auto;
-  /* border: solid red; */
   background-color: rgba(22, 115, 161, 0.4);
-
   padding: 1em 1em 1.4em 1.2em;
   border-radius: 1.25em;
   height: 100%;
+  position: relative;
+  overflow: hidden;
 }
-.tableContainer > div {
+.progressContainer {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+
+}
+
+.tableContainer > div:last-child {
   height: inherit;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -16,7 +24,7 @@
   scrollbar-color: rgb(20, 85, 101) rgba(0, 0, 0, 0);
 }
 
-.tableContainer > div::-webkit-scrollbar {
+.tableContainer > div:last-child::-webkit-scrollbar {
   width: 4px;
 }
 
