--- a/Frontend/src/Components/Body/Body.module.css
+++ b/Frontend/src/Components/Body/Body.module.css
@@ -1,9 +1,16 @@
 .body {
-  /* border: solid red; */
-  grid-column: span 5 / span 5;
+  /* grid-column: span 5 / span 5;
   grid-row: span 5 / span 5;
   grid-column-start: 2;
-  grid-row-start: 2;
-  /* border: 1px solid rgb(169, 169, 169); */
+  grid-row-start: 2; */
   padding-inline: 3.3em 1.25em;
+  overflow-y: scroll;
+  
+}
+.body:last-child::-webkit-scrollbar {
+  width: 0px;
+}
+
+.body::-webkit-scrollbar-thumb {
+  /* background: rgb(41, 174, 209); */
 }
