--- a/Frontend/src/Components/Staff/Staff.module.css
+++ b/Frontend/src/Components/Staff/Staff.module.css
@@ -1,14 +1,5 @@
-.staffPanel {
-  width: 100%;
-  border-radius: 1.25em;
-  background-color: rgba(77, 109, 172, 0.4);
-  display: flex;
-  align-items: end;
-  justify-content: space-between;
-  padding: 2em 1.25em;
-}
 .tableContainer {
-  height: 30em;
+  max-height: 30em;
   margin-top: 1.56em;
 }
 .tableContainer > div {
