--- a/Frontend/src/Components/Table/Table.module.css
+++ b/Frontend/src/Components/Table/Table.module.css
@@ -2,7 +2,7 @@
   font-family: "Nunito", serif;
   font-optical-sizing: auto;
   background-color: rgba(22, 115, 161, 0.4);
-  padding: 1em 1em 1.4em 1.2em;
+  padding: 1em 1em 0 1.2em;
   border-radius: 1.25em;
   display: flex;
   position: relative;
@@ -21,7 +21,7 @@
   height: inherit;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding-right: 1em;
+  padding: 0 1em 2em 0;
   scrollbar-color: rgb(20, 85, 101) rgba(0, 0, 0, 0);
 }
 
