--- a/Frontend/src/Components/Heading/Heading.module.css
+++ b/Frontend/src/Components/Heading/Heading.module.css
@@ -48,6 +48,7 @@
   display: flex;
   background-color: rgba(255, 255, 255, 0.68);
   border-radius: 6px;
+  cursor: pointer;
 }
 
 .language > span {
