--- a/Frontend/src/Components/Table/Table.module.css
+++ b/Frontend/src/Components/Table/Table.module.css
@@ -1,13 +1,14 @@
 .tableContainer {
   font-family: "Nunito", serif;
   font-optical-sizing: auto;
-  background-color: rgba(22, 115, 161, 0.4);
   padding: 1em 1em 0 1.2em;
   border-radius: 1.25em;
   display: flex;
+  flex-direction: column;
   position: relative;
   overflow: hidden;
   flex-grow: 1;
+  height: 100%;
 }
 .progressContainer {
   position: absolute;
@@ -16,15 +17,22 @@
   top: 0;
 }
 
-.tableContainer > div:last-child {
+.tableContainer > div:nth-child(2) {
   flex-grow: 1;
   height: inherit;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 0 1em 2em 0;
+  padding: 0 1em 0em 0;
   scrollbar-color: rgb(20, 85, 101) rgba(0, 0, 0, 0);
+  background-color: inherit;
 }
-
+.tableContainer > div:last-child {
+  height: 10%;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  position: absolute;
+}
 .tableContainer > div:last-child::-webkit-scrollbar {
   width: 4px;
 }
@@ -72,13 +80,15 @@
   overflow: scroll;
   margin-top: 2.5em;
   border-collapse: collapse;
+  background-color: inherit;
 }
-.table > div {
-  position: relative;
-}
+
 .table > thead {
+  width: 100%;
+  height: 2em;
   position: sticky;
   top: 0px;
+  background-color: inherit;
 }
 
 .table > thead > tr > th {
@@ -92,14 +102,16 @@
 .table > tbody > tr {
   border-bottom: 0.5px solid hsl(0, 0%, 71%);
 }
+.serial::before {
+  counter-increment: Serial;
+  content: counter(Serial);
+}
 .table > tbody td {
   font-weight: 400;
   padding-block: 1.4em 1em;
-  padding-right: 10%;
-  /* border: solid red; */
+  /* padding-right: 10%; */
 }
 .action {
-  background: rgb(216, 158, 219);
   background: linear-gradient(
     76deg,
     rgba(216, 158, 219, 1) 0%,
@@ -112,18 +124,33 @@
   cursor: pointer;
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: end;
+}
+.border {
+  width: 100%;
+  height: 0.1em;
+  background: linear-gradient(
+    76deg,
+    rgba(216, 158, 219, 1) 0%,
+    rgba(223, 223, 223, 1) 100%
+  );
+  opacity: 0;
+  transition: opacity 0.5s;
+  border-radius: 2em;
+}
+.action:hover .border {
+  opacity: 1;
 }
 
-.action::before {
+/* .action::before {
   content: "";
   position: absolute;
-  width: 40%;
+  width: 100%;
   bottom: 25%;
   transition: 600ms;
   height: 2%;
 }
 .action:hover:before {
   background-color: rgba(216, 158, 219, 1);
-}
+} */
