--- a/Frontend/src/Components/Navigation/Navigation.module.css
+++ b/Frontend/src/Components/Navigation/Navigation.module.css
@@ -6,13 +6,64 @@
   box-shadow: 15px 0px 30px -10px rgba(89, 89, 89, 0.44);
   -webkit-box-shadow: 15px 0px 30px -10px rgba(89, 89, 89, 0.44);
   -moz-box-shadow: 15px 0px 30px -10px rgba(89, 89, 89, 0.44);
-  /* display: none; */
+  position: relative;
+  overflow: hidden;
+  user-select: none;
+  height: 100%;
+}
+[dir="rtl"] .navigation {
+  box-shadow: -15px 0px 30px -10px rgba(89, 89, 89, 0.44);
+}
+.expand {
+  transform: rotate(180deg);
+
+  right: calc(0em - 2em);
+  position: absolute;
+  bottom: 47.5%;
+  z-index: -1;
+  padding: 0;
+  cursor: pointer;
+  z-index: 10;
+  /* border: solid red; */
+}
+[dir="rtl"] .expand {
+  transform: rotate(0deg);
+  left: calc(0em - 2em);
+  right: unset;
+}
+
+.expand:hover {
+  color: white;
+}
+
+.resize {
+  background-color: #3a3755;
+  position: absolute;
+  right: 0%;
+  height: 20%;
+  width: 0.25em;
+  top: 40%;
+  border-radius: 1em 0 0 1em;
+  cursor: ew-resize;
+  transition: background 500ms;
+}
+
+[dir="rtl"] .resize {
+  right: calc(100% - 0.25em);
+  width: 0.25em;
+  top: 40%;
+  border-radius: 0 1em 1em 0;
+}
+
+.resize:hover {
+  background-color: #645e96;
 }
 .logoContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-block: 2.5em 4em;
+  height: 15em;
 }
 
 .logoContainer > img {
@@ -25,43 +76,53 @@
   font-size: 0.8em;
   padding-inline: 5em;
   letter-spacing: 10%;
+  user-select: text;
 }
 
 .listItem {
   display: flex;
   align-items: center;
-  padding: 0.625em 2em;
+  padding-block: 0.625em;
+  padding-inline-start: 10%;
   position: relative;
   cursor: default;
   user-select: none;
   text-decoration: none;
 }
 .listItem > span {
-  margin-inline: 1em;
+  text-wrap: nowrap;
+  margin-inline: 7% 0.5em;
   font-size: 1.2em;
   color: white;
 }
 .active {
   position: absolute;
   height: 100%;
-  width: 100%;
+  width: 25em;
   left: 0;
   background-color: rgba(141, 162, 255, 0.15);
-  z-index: -1;
+}
+[dir="rtl"] .active {
+  right: 0;
+
 }
 .active > div {
   width: 0.6em;
   height: 100%;
   background-color: #645e96;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0.625em;
+  margin-inline-start: -0.2em;
 }
 .navbar {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  /* border: solid red; */
+  min-width: 12.5em;
 }
 .copyright {
   font-size: 0.8em;
   text-align: center;
-  padding: 2em 4em;
+  padding: 2em 2em;
+  margin-top: auto;
 }
