--- a/Frontend/src/Components/Forms/SelectTable/SelectTable.module.css
+++ b/Frontend/src/Components/Forms/SelectTable/SelectTable.module.css
@@ -1,7 +1,7 @@
-.SelectTable {
+.background {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 0.625em;
-  width: 100%;
+
   margin-top: 2.25em;
   padding: 0.75em 1em;
 }
@@ -35,6 +35,9 @@
 .optionWrapper {
   position: relative;
   top: 1em;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
 }
 .add {
   font-size: 1em;
@@ -48,12 +51,11 @@
   color: rgb(255, 255, 255);
 }
 .text {
-  /* border: solid red; */
   display: flex;
   justify-content: center;
 }
 .text > input {
-  width: 40%;
+  width: 20%;
   color: white;
   padding: 0.63em 0.3em 0.63em 0.63em;
   border: none;
@@ -63,6 +65,7 @@
 }
 .delete {
   text-align: end;
+  width: 4em;
 }
 .row {
   position: relative;
@@ -75,4 +78,40 @@
   bottom: 0;
   width: 100%;
   height: 100%;
+}
+.singleSelect {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  align-content: center;
+  user-select: none;
+}
+
+.invoiceSummary-linebreak {
+  border-bottom: 0.5px solid hsl(0, 0%, 71%);
+  width: 100%;
+  margin-block: 1em;
+}
+
+.invoiceSummary {
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+  align-items: end;
+}
+
+.container {
+  font-size: 1em;
+  display: grid;
+  grid-template-columns: 45% 40%;
+  gap: 1.2em 0.5em;
+  width: 40%;
+}
+
+.container > div {
+  text-align: left;
+  border-radius: 5px;
+}
+.title {
+  font-weight: 700;
 }
