--- a/Frontend/src/Components/Forms/EditSubscription/EditSubscription.module.css
+++ b/Frontend/src/Components/Forms/EditSubscription/EditSubscription.module.css
@@ -25,3 +25,25 @@
 .dotMenu:hover {
   background-color: rgb(94, 94, 94);
 }
+.modal {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.modalTitle {
+  text-align: start;
+  font-size: 1.5em;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+
+}
+
+.modalTitle > ul {
+  margin-top: 1em;
+  font-size: 0.4em;
+  color: #858585;
+  line-height: 1.2em;
+  list-style-type: none;
+}
