--- a/Frontend/src/Components/Forms/SelectTable/SelectTable.module.css
+++ b/Frontend/src/Components/Forms/SelectTable/SelectTable.module.css
@@ -1,12 +1,16 @@
 .background {
   background-color: rgba(0, 0, 0, 0.3);
-  border-radius: 0.625em;
+  border-radius: 0.7em;
 
   margin-top: 2.25em;
-  padding: 0.75em 1em;
+  padding: 1.5em 1em;
+  
 }
 .SelectTable > span {
-  font-size: 1.375em;
+  font-size: 1.5em;
+  display: block;
+  margin-bottom: 1em;
+  font-weight: 700;
 }
 .SelectTable > table {
   width: 100%;
