--- a/Frontend/src/Components/Forms/Date/DateField.module.css
+++ b/Frontend/src/Components/Forms/Date/DateField.module.css
@@ -14,7 +14,6 @@
   /* width: 100%; */
   border-radius: 10px;
   user-select: none;
-  gap: 0.5em;
   height: 3.2em;
   overflow: hidden;
 }
@@ -26,6 +25,7 @@
   justify-content: center;
   padding-inline: 0.5em 0.25em;
   border-inline: 1px solid #d0d0d0;
+  width: 50%;
 }
 .cycleContainer > div,
 .cycleContainer > div > div {
@@ -41,11 +41,9 @@
 .cycle {
   background: rgba(0, 0, 0, 0);
   background-color: none;
-  padding: 0.5em 0.25em;
   border: none;
   color: white;
   flex-grow: 1;
-  /* width: 100%; */
 }
 
 .cycle::placeholder {
