--- a/Frontend/src/Components/Navigation/Navigation.module.css
+++ b/Frontend/src/Components/Navigation/Navigation.module.css
@@ -10,6 +10,7 @@
   overflow: hidden;
   user-select: none;
   height: 100%;
+  background: var(--bg);
 }
 [dir="rtl"] .navigation {
   box-shadow: -15px 0px 30px -10px rgba(89, 89, 89, 0.44);
@@ -104,7 +105,6 @@
 }
 [dir="rtl"] .active {
   right: 0;
-
 }
 .active > div {
   width: 0.6em;
