--- a/Frontend/src/Pages/Home/Home.module.css
+++ b/Frontend/src/Pages/Home/Home.module.css
@@ -1,6 +1,6 @@
 .home {
   color: white;
-
+  background: var(--bg);
   display: flex;
   height: 100vh;
   overflow: hidden;
@@ -8,7 +8,6 @@
 .content {
   overflow-y: scroll;
   width: 100%;
-  
 }
 .content:last-child::-webkit-scrollbar {
   width: 4px;
