--- a/Frontend/src/Components/Table/Table.module.css
+++ b/Frontend/src/Components/Table/Table.module.css
@@ -1,7 +1,8 @@
 .tableContainer {
   font-family: "Nunito", serif;
   font-optical-sizing: auto;
-  padding: 1.5em 2em 0 1.2em;
+  padding-top: 1.5em;
+  padding-inline-end: 1em;
   border-radius: 1.25em;
   display: flex;
   flex-direction: column;
@@ -22,9 +23,9 @@
   height: inherit;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 0 1em 0em 0;
   scrollbar-color: rgb(20, 85, 101) rgba(0, 0, 0, 0);
   background-color: inherit;
+  padding-inline: 1em;
 }
 .tableContainer > div:last-child {
   height: 10%;
@@ -53,22 +54,6 @@
   border-right: 3px solid transparent;
   background-clip: padding-box;
 }
-
-/* .tableContainer > div::-webkit-scrollbar {
-  width: 2px;
-}
-
-.tableContainer > div::-webkit-scrollbar-track {
-  background: rgb(0, 0, 0);
-  position: relative;
-  left: 20px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-.tableContainer > div::-webkit-scrollbar-thumb {
-  background: red;
-  border: 3px solid rgb(0, 217, 255);
-} */
 
 .title {
   font-size: 1.25em;
@@ -125,10 +110,6 @@
   font-size: 1em;
   letter-spacing: 1.5px;
   cursor: pointer;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 .border {
   width: 100%;
